--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
                         </div>
                         <div class="main-slider__slider slider-main">
                             <div class="slider-main__controls controls-slider-main">
-                                <div class="controls-slider-main__dotta">
+                                <div class="controls-slider-main__dotta swiper-pagination">
 
                                 </div>
                                 <div class="controls-slider-main__arrows slider-arrows">
-                                    <button class="slider-arrow slider-arrow__prev __icon-arrow-down">
+                                    <button class="slider-arrow slider-arrow__prev  __icon-arrow-down">
                                     </button>
-                                    <button class="slider-arrow slider-arrow__next __icon-arrow-down">
+                                    <button class="slider-arrow slider-arrow__next  __icon-arrow-down">
                                     </button>
                                 </div>
                             </div>
@@ -379,6 +379,78 @@
                     </div>
                 </div>
             </section>
+            <section class="page__rooms rooms">
+                <div class="rooms__container container">
+                    <div class="rooms__body">
+                        <h2 class="rooms__title title">
+                            50+ Beautiful rooms
+                            inspiration
+                        </h2>
+                        <div class="rooms__text">
+                            Our designer already made a lot of beautiful prototipe of rooms that inspire you
+                        </div>
+                        <a href="" class="rooms__button btn">Explore More</a>
+
+                    </div>
+                    <div class="rooms__slider slider-rooms">
+                        <div class="slider-rooms__body swiper">
+                            <div class="slider-rooms-wrapper swiper-wrapper">
+                                <div class="slider-rooms__slide swiper-slide">
+                                    <div class="slider-rooms__image ibg">
+                                        <img src="img/rooms/01.jpg" alt="">
+                                    </div>
+                                    <a href="#" class="slider-rooms__content __icon-arrow-link">
+                                        <div class="slider-rooms__label label-slider">
+                                            <div class="label-slider__number">01</div>
+                                            <div class="label-slider__line"></div>
+                                            <div class="label-slider__text">Bed Room</div>
+                                        </div>
+                                        <div class="slider-rooms__title">
+                                            Inner Peace
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="slider-rooms__slide swiper-slide">
+                                    <div class="slider-rooms__image ibg">
+                                        <img src="img/rooms/02.jpg" alt="">
+                                    </div>
+                                    <a href="#" class="slider-rooms__content __icon-arrow-link">
+                                        <div class="slider-rooms__label label-slider">
+                                            <div class="label-slider__number">02</div>
+                                            <div class="label-slider__line"></div>
+                                            <div class="label-slider__text">Bed Room</div>
+                                        </div>
+                                        <div class="slider-rooms__title">
+                                            Inner Peace
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="slider-rooms__slide swiper-slide">
+                                    <div class="slider-rooms__image ibg">
+                                        <img src="img/rooms/03.jpg" alt="">
+                                    </div>
+                                    <a href="#" class="slider-rooms__content __icon-arrow-link">
+                                        <div class="slider-rooms__label label-slider">
+                                            <div class="label-slider__number">03</div>
+                                            <div class="label-slider__line"></div>
+                                            <div class="label-slider__text">Bed Room</div>
+                                        </div>
+                                        <div class="slider-rooms__title">
+                                            Inner Peace
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="slider-rooms__arrows slider-arrrows">
+                                <button class="slider-arrow  slider-arrow__prev  __icon-arrow-down">
+                                </button>
+                                <button class="slider-arrow slider-arrow__next  __icon-arrow-down">
+                                </button>
+                            </div>
+                            <div class="slider-rooms__dotts"></div>
+                        </div>
+                    </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="footer__container container">
@@ -445,7 +517,6 @@
 
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/script.js"></script>
 </body>
 
 </html>
