--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/annul.css">
     <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 
 </head>
 
@@ -451,6 +450,126 @@
                         </div>
                     </div>
             </section>
+            <section class="tips">
+                <div class="tips__container container">
+                    <div class="tips__title title">
+                        Tips & Tricks
+                    </div>
+                    <div class="tips__block-slider">
+                        <div class="tips__body swiper">
+                            <div class="tips__wrapper swiper-wrapper">
+                                <div class="tips__slide slide-tips swiper-slide">
+                                    <div class="slide-tips__img ">
+                                        <img src="img/tips/01.jpg" alt="">
+                                    </div>
+                                    <div class="slide-tips__body">
+                                        <div class="slide-tips__title">
+                                            How to create a living
+                                            room to <br> love
+                                        </div>
+                                        <div class="slide-tips__text">
+                                            20 jan 2020
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="tips__slide slide-tips swiper-slide">
+                                    <div class="slide-tips__img ">
+                                        <img src="img/tips/02.jpg" alt="">
+                                    </div>
+                                    <div class="slide-tips__body">
+                                        <div class="slide-tips__title">
+                                            Solution for clean look working
+                                            space
+                                        </div>
+                                        <div class="slide-tips__text">
+                                            10 jan 2020
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="tips__slide slide-tips swiper-slide">
+                                    <div class="slide-tips__img ">
+                                        <img src="img/tips/03.jpg" alt="">
+                                    </div>
+                                    <div class="slide-tips__body">
+                                        <div class="slide-tips__title">
+                                            Make your cooking activity
+                                            more fun with good setup
+                                        </div>
+                                        <div class="slide-tips__text">
+                                            20 jan 2020
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="tips__slide slide-tips swiper-slide">
+                                    <div class="slide-tips__img ">
+                                        <img src="img/tips/02.jpg" alt="">
+                                    </div>
+                                    <div class="slide-tips__body">
+                                        <div class="slide-tips__title">
+                                            Solution for clean look working
+                                            space
+                                        </div>
+                                        <div class="slide-tips__text">
+                                            20 june 2020
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="slider-tips__arrows slider-arrrows">
+                            <button class="slider-arrow  slider-arrow__prev  __icon-arrow-down">
+                            </button>
+                            <button class="slider-arrow slider-arrow__next  __icon-arrow-down">
+                            </button>
+                        </div>
+                        <div class="tips__dotts"></div>
+                    </div>
+
+
+                </div>
+            </section>
+            <section class="page__furniture furniture">
+                <div class="furniture__container">
+                    <h3 class="furniture__label">
+                        Share your setup with
+                    </h3>
+                    <h2 class="furniture__title title">#FuniroFurniture</h2>
+                    <div data-speed="0.01" class="furniture__body">
+                        <div class="furniture__items">
+                            <div class="furniture__column">
+                                <div class="furniture__row row-furniture row-furniture_left-top">
+                                    <a href="" class="row-furniture__item"><img src="img/furniture/09.jpg" alt=""></a>
+                                    <a href="" class="row-furniture__item"><img src="img/furniture/01.jpg" alt=""></a>
+                                    <a href="img/furniture/02.jpg" class="row-furniture__item"><img
+                                            src="img/furniture/02.jpg" alt=""></a>
+                                </div>
+                                <div class="furniture__row row-furniture row-furniture_left-bottom">
+                                    <a href="" class="row-furniture__item"><img src="img/furniture/04.jpg" alt=""></a>
+                                    <a href="" class="row-furniture__item"><img src="img/furniture/06.jpg" alt=""></a>
+                                    <a href="" class="row-furniture__item"><img src="img/furniture/07.jpg" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="furniture__column">
+                                <div class="furniture__row row-furniture row-furniture_center">
+                                    <a href="" class="row-furniture__item"><img src="img/furniture/03.jpg" alt=""></a>
+                                </div>
+                            </div>
+                            <div class="furniture__column">
+                                <div class="furniture__row row-furniture row-furniture_right-top">
+                                    <a href="" class="row-furniture__item"><img src="img/furniture/04.jpg" alt=""></a>
+                                    <a href="" class="row-furniture__item"><img src="img/furniture/05.jpg" alt=""></a>
+                                    <a href="" class="row-furniture__item"><img src="img/furniture/01.jpg" alt=""></a>
+                                </div>
+                                <div class="furniture__row row-furniture row-furniture_rigth-bottom">
+                                    <a href="" class="row-furniture__item"><img src="img/furniture/08.jpg" alt=""></a>
+                                    <a href="" class="row-furniture__item"><img src="img/furniture/09.jpg" alt=""></a>
+                                    <a href="" class="row-furniture__item"><img src="img/furniture/06.jpg" alt=""></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="footer__container container">
@@ -517,6 +636,7 @@
 
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/swiper.js"></script>
 </body>
 
 </html>
